--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="container">
         <section id="inicio">
             <h2>Bem-vindo ao Meu Portfólio</h2>
-            <img src="img/sua-foto.jpg" alt="Minha Foto" class="foto">
+            <img src="img/sua-foto1.jpg" alt="Minha Foto" class="foto">
             <p>Olá! Sou Ciro Massariol, fotográfo, videomaker, estudante de Sistemas de Informação e desenvolvedor web iniciante.</p>
         </section>
 
