--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu Portfólio</title>
-    
+    <link rel="stylesheet" href="css/styles.css">
+
+
+
+
 </head>
 <body>
     <header>
